--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "webpack": "^5.51.2"
   },
   "dependencies": {
-    "axios": "^0.25.0",
+    "axios": "1.6.2",
     "dataloader": "^2.0.0",
     "symbol.inspect": "1.0.1",
     "teslabot": "^1.3.0",
