Clean-up package json

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "repository": "https://github.com/ton-org/ton.git",
   "author": "Whales Corp. <developers@whalescorp.com>",
   "license": "MIT",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "scripts": {
     "docs": "rm -fr docs && typedoc src/index.ts",
