--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "https://github.com/ton-org/ton.git",
   "author": "Whales Corp. <developers@whalescorp.com>",
   "license": "MIT",
+  "type": "module",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -11,44 +12,45 @@
   "scripts": {
     "docs": "rm -fr docs && typedoc src/index.ts",
     "build": "rm -fr dist && tsc --declaration",
+    "tc": "tsc --noEmit",
     "test": "jest --verbose --runInBand",
     "release": "yarn build && yarn release-it --npm.yarn1"
   },
   "devDependencies": {
-    "@release-it/keep-a-changelog": "^5.0.0",
-    "@ton/core": "^0.56.0",
-    "@ton/crypto": "3.2.0",
-    "@ton/emulator": "^2.1.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.10",
-    "buffer": "^6.0.3",
-    "expect": "^27.1.0",
-    "jest": "^27.1.0",
-    "jest-mock": "^27.1.0",
-    "karma": "^6.3.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^4.0.1",
-    "karma-typescript": "^5.5.2",
-    "karma-webpack": "^5.0.0",
-    "prando": "^6.0.1",
-    "release-it": "^17.1.1",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.7.0",
-    "typedoc": "^0.23.24",
-    "typescript": "^4.4.2",
-    "webpack": "^5.51.2"
+    "@release-it/keep-a-changelog": "5.0.0",
+    "@ton/core": "0.57.0",
+    "@ton/crypto": "3.3.0",
+    "@ton/emulator": "2.1.3",
+    "@types/jest": "29.5.12",
+    "@types/node": "22.5.4",
+    "buffer": "6.0.3",
+    "expect": "29.7.0",
+    "jest": "29.7.0",
+    "jest-mock": "29.7.0",
+    "karma": "6.4.4",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-typescript": "5.5.4",
+    "karma-webpack": "5.0.1",
+    "prando": "6.0.1",
+    "release-it": "17.6.0",
+    "ts-jest": "29.2.5",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "typedoc": "0.26.7",
+    "typescript": "5.6.2",
+    "webpack": "5.94.0"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "dataloader": "^2.0.0",
-    "symbol.inspect": "1.0.1",
-    "teslabot": "^1.3.0",
-    "zod": "^3.21.4"
+    "axios": "^1.7.7",
+    "dataloader": "^2.2.2",
+    "symbol.inspect": "1.0.3",
+    "teslabot": "^1.5.0",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
-    "@ton/core": ">=0.56.0",
-    "@ton/crypto": ">=3.2.0"
+    "@ton/core": ">=0.57.0",
+    "@ton/crypto": ">=3.3.0"
   },
   "publishConfig": {
     "access": "public",
@@ -64,5 +66,5 @@
       }
     }
   },
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "pnpm@9.10.0"
 }
