--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.10",
     "buffer": "^6.0.3",
+    "dotenv": "^16.5.0",
     "expect": "^27.1.0",
     "jest": "^27.1.0",
     "jest-mock": "^27.1.0",
