--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ton/test-utils": "^0.12.0",
     "axios": "^1.6.7",
     "dataloader": "^2.0.0",
+    "prettier": "^3.2.5",
     "symbol.inspect": "1.0.1",
     "teslabot": "^1.3.0",
     "zod": "^3.21.4"
