--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@ton/core": "^0.62.0",
         "@ton/crypto": "3.2.0",
         "@ton/emulator": "^2.1.1",
+        "@ton/sandbox": "^0.40.0",
+        "@ton/test-utils": "^0.12.0",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.30",
         "buffer": "^6.0.3",
