--- a/package.json
+++ b/package.json
@@ -32,18 +32,12 @@
         "expect": "^27.1.0",
         "jest": "^29.7.0",
         "jest-mock": "^27.1.0",
-        "karma": "^6.3.4",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-jasmine": "^4.0.1",
-        "karma-typescript": "^5.5.2",
-        "karma-webpack": "^5.0.0",
         "prando": "^6.0.1",
         "release-it": "^17.1.1",
         "ts-jest": "^27.0.5",
         "ts-loader": "^9.2.5",
         "ts-node": "^10.7.0",
-        "typescript": "^5.6.3",
-        "webpack": "^5.51.2"
+        "typescript": "^5.6.3"
     },
     "dependencies": {
         "axios": "^1.6.7",
