--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "allowJs": true,
+        "checkJs": true,
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
         /* Basic Options */
@@ -69,5 +71,5 @@
         "skipLibCheck": true /* Skip type checking of declaration files. */,
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
-    "include": ["src/**/*"]
+    "include": ["**/*"]
 }
