--- a/package.json
+++ b/package.json
@@ -23,33 +23,17 @@
         "@swc/jest": "^0.2.39",
         "@ton/core": "^0.62.0",
         "@ton/crypto": "3.2.0",
-        "@ton/emulator": "^2.1.1",
         "@ton/sandbox": "^0.40.0",
         "@ton/test-utils": "^0.12.0",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.30",
-        "buffer": "^6.0.3",
-        "expect": "^27.1.0",
         "jest": "^29.7.0",
-        "jest-mock": "^27.1.0",
-        "karma": "^6.3.4",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-jasmine": "^4.0.1",
-        "karma-typescript": "^5.5.2",
-        "karma-webpack": "^5.0.0",
-        "prando": "^6.0.1",
         "release-it": "^17.1.1",
-        "ts-jest": "^27.0.5",
-        "ts-loader": "^9.2.5",
-        "ts-node": "^10.7.0",
-        "typescript": "^5.6.3",
-        "webpack": "^5.51.2"
+        "typescript": "^5.6.3"
     },
     "dependencies": {
         "axios": "^1.6.7",
         "dataloader": "^2.0.0",
-        "symbol.inspect": "1.0.1",
-        "teslabot": "^1.3.0",
         "zod": "^3.21.4"
     },
     "peerDependencies": {
