--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dist"
     ],
     "scripts": {
-        "build": "rm -fr dist && tsc --declaration",
+        "build": "rm -fr dist && tsc -p ./tsconfig.build.json",
+        "typecheck": "tsc",
         "test": "jest --verbose",
         "format": "biome format --write .",
         "format:check": "biome format .",
