--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "license": "MIT",
     "main": "dist/index.js",
     "files": [
-        "dist"
+        "dist",
+        "!*.test.*",
+        "!*.spec.*",
+        "!*.trait.*",
+        "!__snapshots__",
+        "!__testdata__",
+        "!__tests__"
     ],
     "scripts": {
         "build": "rm -fr dist && tsc -p ./tsconfig.build.json",
