--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
-    "extends": "./tsconfig.base.json",
-    "compilerOptions": {
-        "noEmit": true
-    },
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {},
     "include": ["**/*"]
 }
