refactor: use NPM OIDC trusted publishing instead of token
Remove NPM_TOKEN requirement by using NPM's trusted publishing feature via OIDC.
This is more secure as it eliminates long-lived tokens and uses short-lived
cryptographic credentials. Provenance attestation is automatically generated
with trusted publishing (no --provenance flag needed).

Requires configuration of trusted publisher on npmjs.com settings.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,11 +78,8 @@ jobs:
       - name: Release with release-it
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn release-it ${{ github.event.inputs.release-type }} --ci --npm.skipChecks
       
-      - name: Publish to NPM with provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --provenance --access public
+      - name: Publish to NPM with OIDC
+        run: npm publish --access public
