--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,85 +1,40 @@
-name: Release
+name: Publish to NPM (OIDC)
 
 on:
-  workflow_dispatch:
-    inputs:
-      release-type:
-        description: 'Release type'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
-          - prerelease
-
-permissions:
-  contents: write
-  id-token: write
+  workflow_dispatch: { }
+  push:
+    branches:
+      - main
+    paths:
+      - package.json
+      - yarn.lock
 
 jobs:
-  quality-gates:
+  publish:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Enable Corepack
-        run: corepack enable
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          cache: 'yarn'
-      
-      - name: Install dependencies
-        run: yarn install --immutable
-      
-      - name: Check formatting
-        run: yarn format:check
-      
-      - name: Type check
-        run: yarn typecheck
-      
-      - name: Run tests
-        run: yarn test
 
-  release:
-    needs: quality-gates
-    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Configure Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-      
-      - name: Enable Corepack
-        run: corepack enable
-      
-      - name: Setup Node.js
+
+      - name: Use Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'yarn'
-      
+          node-version: "24.x"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Install dependencies
         run: yarn install --immutable
-      
+
       - name: Build
         run: yarn build
-      
-      - name: Release with release-it
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          yarn release-it ${{ github.event.inputs.release-type }} --ci --npm.skipChecks
-      
-      - name: Publish to NPM with OIDC
-        run: npm publish --access public
+
+      - name: Publish
+        run: NODE_AUTH_TOKEN="" npm publish --provenance --access public
