--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,32 +9,74 @@ on:
       - package.json
       - yarn.lock
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
-  publish:
+  quality-gates:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      id-token: write
-
     steps:
       - uses: actions/checkout@v4
-
-      - name: Use Node.js 24
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24.x"
-          registry-url: "https://registry.npmjs.org"
-          always-auth: true
-
+      
       - name: Enable Corepack
         run: corepack enable
-
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'yarn'
+      
       - name: Install dependencies
         run: yarn install --immutable
+      
+      - name: Check formatting
+        run: yarn format:check
+      
+      - name: Type check
+        run: yarn typecheck
+      
+      - name: Run tests
+        run: yarn test
 
+  release:
+    needs: quality-gates
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+      
+      - name: Enable Corepack
+        run: corepack enable
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24.x'
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
+          always-auth: true
+          
+      - name: Install dependencies
+        run: yarn install --immutable
+      
       - name: Build
         run: yarn build
+      
+      - name: Release with release-it
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          yarn release-it ${{ github.event.inputs.release-type }} --ci --npm.skipChecks
+      
+      - name: Publish to NPM with OIDC
+        run: npm publish --access public
 
-      - name: Publish
-        run: npm publish --provenance --access public
