--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,19 +40,11 @@ jobs:
       - name: Run tests
         run: yarn test
 
-  release:
+  publish:
     needs: quality-gates
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Configure Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
       
       - name: Enable Corepack
         run: corepack enable
@@ -64,19 +56,12 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'yarn'
           always-auth: true
-          
+      
       - name: Install dependencies
         run: yarn install --immutable
       
       - name: Build
         run: yarn build
       
-      - name: Release with release-it
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          yarn release-it ${{ github.event.inputs.release-type }} --ci --npm.skipChecks
-      
       - name: Publish to NPM with OIDC
         run: npm publish --access public
-
